Added material from nh invariants and symmetries papaer

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,280 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-11-03 17:10:04 +0100 
+%% Created for Mugagroup at 2020-11-04 12:37:17 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Longhi2017a,
+	Abstract = {In the past decade, the concept of parity-time  symmetry, originally introduced in non-Hermitian extensions of quantum mechanical theories, has come into thinking of photonics, providing a fertile ground for studying, observing, and utilizing some of the peculiar aspects of  symmetry in optics. Together with related concepts of non-Hermitian physics of open quantum systems, such as non-Hermitian degeneracies (exceptional points) and spectral singularities,  symmetry represents one among the most fruitful ideas introduced in optics in the past few years. Judicious tailoring of optical gain and loss in integrated photonic structures has emerged as a new paradigm in shaping the flow of light in unprecedented ways, with major applications encompassing laser science and technology, optical sensing, and optical material engineering. In this perspective, I review some of the main achievements and emerging areas of -symmetric and non-Hermtian photonics, and provide an outline of challenges and directions for future research in one of the fastest growing research area of photonics.},
+	Author = {Stefano Longhi},
+	Date-Added = {2020-11-04 12:24:49 +0100},
+	Date-Modified = {2020-11-04 12:25:26 +0100},
+	Doi = {10.1209/0295-5075/120/64001},
+	Journal = {{EPL} (Europhysics Letters)},
+	Month = {dec},
+	Number = {6},
+	Pages = {64001},
+	Publisher = {{IOP} Publishing},
+	Title = {Parity-time symmetry meets photonics: A new twist in non-Hermitian optics},
+	Url = {https://doi.org/10.1209%2F0295-5075%2F120%2F64001},
+	Volume = {120},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1209%2F0295-5075%2F120%2F64001},
+	Bdsk-Url-2 = {https://doi.org/10.1209/0295-5075/120/64001}}
+
+@article{Chen2017,
+	Author = {Chen, Penghua and Chong, Y. D.},
+	Date-Added = {2020-11-04 12:20:56 +0100},
+	Date-Modified = {2020-11-04 12:21:02 +0100},
+	Doi = {10.1103/PhysRevA.95.062113},
+	Issue = {6},
+	Journal = {Phys. Rev. A},
+	Month = {Jun},
+	Numpages = {7},
+	Pages = {062113},
+	Publisher = {American Physical Society},
+	Title = {Pseudo-Hermitian Hamiltonians generating waveguide mode evolution},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.95.062113},
+	Volume = {95},
+	Year = {2017},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.95.062113},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.95.062113}}
+
+@article{Deak2012,
+	Abstract = {The reciprocity principle is that, when an emitted wave gets scattered on an object, the scattering transition amplitude does not change if we interchange the source and the detector---in other words, if incoming waves are interchanged with appropriate outgoing ones. Reciprocity is sometimes confused with time reversal invariance, or with invariance under the rotation that interchanges the location of the source and the location of the detector. Actually, reciprocity covers the former as a special case, and is fundamentally different from--but can be usefully combined with--the latter. Reciprocity can be proved as a theorem in many situations and is found violated in other cases. The paper presents a general treatment of reciprocity, discusses important examples, shows applications in the field of photon (M{\"o}ssbauer) scattering, and establishes a fruitful connection with a recently developing area of mathematics.},
+	Author = {L. De{\'a}k and T. F{\"u}l{\"o}p},
+	Date-Added = {2020-11-04 12:19:17 +0100},
+	Date-Modified = {2020-11-04 12:19:17 +0100},
+	Doi = {https://doi.org/10.1016/j.aop.2011.10.013},
+	Issn = {0003-4916},
+	Journal = {Annals of Physics},
+	Keywords = {Reciprocity, Time reversal, Scattering theory, Nuclear resonance scattering, M{\"o}ssbauer spectroscopy},
+	Number = {4},
+	Pages = {1050 - 1077},
+	Title = {Reciprocity in quantum, electromagnetic and other wave scattering},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0003491611001734},
+	Volume = {327},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0003491611001734},
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.aop.2011.10.013}}
+
+@article{Guilarte2017,
+	Abstract = {We investigate a special class of the PT{\$}{\$} {$\backslash$}mathcal{\{}P{\}}{$\backslash$}mathcal{\{}T{\}} {\$}{\$}-symmetric quantum models being perfectly invisible zero-gap systems with a unique bound state at the very edge of continuous spectrum of scattering states. The family includes the PT{\$}{\$} {$\backslash$}mathcal{\{}P{\}}{$\backslash$}mathcal{\{}T{\}} {\$}{\$}-regularized two particle Calogero systems (conformal quantum mechanics models of de Alfaro-Fubini-Furlan) and their rational extensions whose potentials satisfy equations of the KdV hierarchy and exhibit, particularly, a behaviour typical for extreme waves. We show that the two simplest Hamiltonians from the Calogero subfamily determine the fluctuation spectra around the PT{\$}{\$} {$\backslash$}mathcal{\{}P{\}}{$\backslash$}mathcal{\{}T{\}} {\$}{\$}-regularized kinks arising as traveling waves in the field-theoretical Liouville and SU(3) conformal Toda systems. Peculiar properties of the quantum systems are reflected in the associated exotic nonlinear supersymmetry in the unbroken or partially broken phases. The conventional N=2{\$}{\$} {$\backslash$}mathcal{\{}N{\}}=2 {\$}{\$}supersymmetry is extended here to the N=4{\$}{\$} {$\backslash$}mathcal{\{}N{\}}=4 {\$}{\$}nonlinear supersymmetry that involves two bosonic generators composed from Lax-Novikov integrals of the subsystems, one of which is the central charge of the superalgebra. Jordan states are shown to play an essential role in the construction.},
+	Author = {Guilarte, Juan Mateos and Plyushchay, Mikhail S.},
+	Da = {2017/12/12},
+	Date-Added = {2020-11-04 12:16:53 +0100},
+	Date-Modified = {2020-11-04 12:16:53 +0100},
+	Doi = {10.1007/JHEP12(2017)061},
+	Id = {Guilarte2017},
+	Isbn = {1029-8479},
+	Journal = {Journal of High Energy Physics},
+	Number = {12},
+	Pages = {61},
+	Title = {Perfectly invisible PT{\$}{\$} {$\backslash$}mathcal{\{}P{\}}{$\backslash$}mathcal{\{}T{\}} {\$}{\$}-symmetric zero-gap systems, conformal field theoretical kinks, and exotic nonlinear supersymmetry},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1007/JHEP12(2017)061},
+	Volume = {2017},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1007/JHEP12(2017)061}}
+
+@article{Correa2015,
+	Author = {Correa, Francisco and Jakubsk\'y, V\'{\i}t and Plyushchay, Mikhail S.},
+	Date-Added = {2020-11-04 12:15:18 +0100},
+	Date-Modified = {2020-11-04 12:15:28 +0100},
+	Doi = {10.1103/PhysRevA.92.023839},
+	Issue = {2},
+	Journal = {Phys. Rev. A},
+	Month = {Aug},
+	Numpages = {14},
+	Pages = {023839},
+	Publisher = {American Physical Society},
+	Title = {$PT$-symmetric invisible defects and confluent Darboux-Crum transformations},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.92.023839},
+	Volume = {92},
+	Year = {2015},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.92.023839},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.92.023839}}
+
+@article{Alexandre2017,
+	Author = {Alexandre, Jean and Millington, Peter and Seynaeve, Dries},
+	Date-Added = {2020-11-04 12:13:37 +0100},
+	Date-Modified = {2020-11-04 12:14:04 +0100},
+	Doi = {10.1103/PhysRevD.96.065027},
+	Issue = {6},
+	Journal = {Phys. Rev. D},
+	Month = {Sep},
+	Numpages = {9},
+	Pages = {065027},
+	Publisher = {American Physical Society},
+	Title = {Symmetries and conservation laws in non-Hermitian field theories},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevD.96.065027},
+	Volume = {96},
+	Year = {2017},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevD.96.065027},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevD.96.065027}}
+
+@incollection{Torrontegui2013,
+	Abstract = {Quantum adiabatic processes---that keep constant the populations in the instantaneous eigenbasis of a time-dependent Hamiltonian---are very useful to prepare and manipulate states, but take typically a long time. This is often problematic because decoherence and noise may spoil the desired final state, or because some applications require many repetitions. ``Shortcuts to adiabaticity'' are alternative fast processes which reproduce the same final populations, or even the same final state, as the adiabatic process in a finite, shorter time. Since adiabatic processes are ubiquitous, the shortcuts span a broad range of applications in atomic, molecular, and optical physics, such as fast transport of ions or neutral atoms, internal population control, and state preparation (for nuclear magnetic resonance or quantum information), cold atom expansions and other manipulations, cooling cycles, wavepacket splitting, and many-body state engineering or correlations microscopy. Shortcuts are also relevant to clarify fundamental questions such as a precise quantification of the third principle of thermodynamics and quantum speed limits. We review different theoretical techniques proposed to engineer the shortcuts, the experimental results, and the prospects.},
+	Author = {Erik Torrontegui and Sara Ib{\'a}{\~n}ez and Sofia Mart{\'\i}nez-Garaot and Michele Modugno and Adolfo {del Campo} and David Gu{\'e}ry-Odelin and Andreas Ruschhaupt and Xi Chen and Juan Gonzalo Muga},
+	Booktitle = {Advances in Atomic, Molecular, and Optical Physics},
+	Date-Added = {2020-11-04 12:12:12 +0100},
+	Date-Modified = {2020-11-04 12:12:12 +0100},
+	Doi = {https://doi.org/10.1016/B978-0-12-408090-4.00002-5},
+	Editor = {Ennio Arimondo and Paul R. Berman and Chun C. Lin},
+	Issn = {1049-250X},
+	Keywords = {Adiabatic dynamics, Quantum speed limits, Superadiabaticity, Quantum state engineering, Transport engineering of cold atoms, Transport of cold ions, Transport of Bose-Einstein condensates, Wavepacket splitting, Third principle of thermodynamics, Transitionless tracking algorithm, Fast expansions},
+	Pages = {117 - 169},
+	Publisher = {Academic Press},
+	Series = {Advances In Atomic, Molecular, and Optical Physics},
+	Title = {Chapter 2 - Shortcuts to Adiabaticity},
+	Url = {http://www.sciencedirect.com/science/article/pii/B9780124080904000025},
+	Volume = {62},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/B9780124080904000025},
+	Bdsk-Url-2 = {https://doi.org/10.1016/B978-0-12-408090-4.00002-5}}
+
+@article{Ibanez2011,
+	Author = {Ib\'a\~nez, S. and Mart\'{\i}nez-Garaot, S. and Chen, Xi and Torrontegui, E. and Muga, J. G.},
+	Date-Added = {2020-11-04 12:09:28 +0100},
+	Date-Modified = {2020-11-04 12:09:36 +0100},
+	Doi = {10.1103/PhysRevA.84.023415},
+	Issue = {2},
+	Journal = {Phys. Rev. A},
+	Month = {Aug},
+	Numpages = {8},
+	Pages = {023415},
+	Publisher = {American Physical Society},
+	Title = {Shortcuts to adiabaticity for non-Hermitian systems},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.84.023415},
+	Volume = {84},
+	Year = {2011},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.84.023415},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.84.023415}}
+
+@article{Lewis1969,
+	Author = {Lewis,H. R. and Riesenfeld,W. B.},
+	Date-Added = {2020-11-04 12:06:06 +0100},
+	Date-Modified = {2020-11-04 12:06:06 +0100},
+	Doi = {10.1063/1.1664991},
+	Eprint = {https://doi.org/10.1063/1.1664991},
+	Journal = {Journal of Mathematical Physics},
+	Number = {8},
+	Pages = {1458-1473},
+	Title = {An Exact Quantum Theory of the Time‐Dependent Harmonic Oscillator and of a Charged Particle in a Time‐Dependent Electromagnetic Field},
+	Url = {https://doi.org/10.1063/1.1664991},
+	Volume = {10},
+	Year = {1969},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.1664991}}
+
+@article{Rose2009,
+	Author = {Rose, HE},
+	Date-Added = {2020-11-04 11:54:22 +0100},
+	Date-Modified = {2020-11-04 11:54:40 +0100},
+	Publisher = {Springer},
+	Title = {A course on finite groups},
+	Year = {2009}}
+
+@book{Wigner1959,
+	Address = {New York, NY},
+	Author = {Wigner, Eugene Paul},
+	Date-Added = {2020-11-04 11:45:02 +0100},
+	Date-Modified = {2020-11-04 11:45:21 +0100},
+	Note = {Trans. from the German},
+	Publisher = {Academic Press},
+	Series = {Pure Appl. Phys.},
+	Title = {{Group theory and its application to the quantum mechanics of atomic spectra}},
+	Url = {https://cds.cern.ch/record/102713},
+	Year = {1959},
+	Bdsk-Url-1 = {https://cds.cern.ch/record/102713}}
+
+@article{Zezyulin2013,
+	Abstract = {We consider finite-dimensional nonlinear systems with a linear part described by a parity-time (-)symmetric operator. We investigate bifurcations of stationary nonlinear modes from the eigenstates of the linear operator and consider a class of -symmetric nonlinearities allowing the existence of families of nonlinear modes. We pay particular attention to situations when the underlying linear -symmetric operator is characterized by the presence of degenerate eigenvalues or an exceptional-point singularity. In each of the cases we construct formal expansions for small-amplitude nonlinear modes. We also report a class of nonlinearities allowing the system to admit one or several integrals of motion, which turn out to be determined by the pseudo-hermiticity of the nonlinear operator.},
+	Author = {D A Zezyulin and V V Konotop},
+	Date-Added = {2020-11-04 11:29:12 +0100},
+	Date-Modified = {2020-11-04 11:29:12 +0100},
+	Doi = {10.1088/1751-8113/46/41/415301},
+	Journal = {Journal of Physics A: Mathematical and Theoretical},
+	Month = {sep},
+	Number = {41},
+	Pages = {415301},
+	Publisher = {{IOP} Publishing},
+	Title = {Stationary modes and integrals of motion in nonlinear lattices with a {\textdollar}$\lbrace${\textbackslash}mathcal $\lbrace${PT}$\rbrace$$\rbrace${\textdollar}-symmetric linear part},
+	Url = {https://doi.org/10.1088%2F1751-8113%2F46%2F41%2F415301},
+	Volume = {46},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F1751-8113%2F46%2F41%2F415301},
+	Bdsk-Url-2 = {https://doi.org/10.1088/1751-8113/46/41/415301}}
+
+@article{Bagchi2001,
+	Abstract = { The continuity, equation relating the change in time of the position probability density to the gradient of the probability current density is generalized to PT-symmetric quantum mechanics. The normalization condition of eigenfunctions is modified in accordance with this new conservation law and illustrated with some detailed examples. },
+	Author = {BAGCHI, B. and QUESNE, C. and ZNOJIL, M.},
+	Date-Added = {2020-11-04 11:25:52 +0100},
+	Date-Modified = {2020-11-04 11:25:52 +0100},
+	Doi = {10.1142/S0217732301005333},
+	Eprint = {https://doi.org/10.1142/S0217732301005333},
+	Journal = {Modern Physics Letters A},
+	Number = {31},
+	Pages = {2047-2057},
+	Title = {GENERALIZED CONTINUITY EQUATION AND MODIFIED NORMALIZATION IN PT-SYMMETRIC QUANTUM MECHANICS},
+	Url = {https://doi.org/10.1142/S0217732301005333},
+	Volume = {16},
+	Year = {2001},
+	Bdsk-Url-1 = {https://doi.org/10.1142/S0217732301005333}}
+
+@article{Vitanov2016,
+	Author = {Simeonov, Lachezar S. and Vitanov, Nikolay V.},
+	Date-Added = {2020-11-04 11:22:23 +0100},
+	Date-Modified = {2020-11-04 11:22:31 +0100},
+	Doi = {10.1103/PhysRevA.93.012123},
+	Issue = {1},
+	Journal = {Phys. Rev. A},
+	Month = {Jan},
+	Numpages = {7},
+	Pages = {012123},
+	Publisher = {American Physical Society},
+	Title = {Dynamical invariants for pseudo-Hermitian Hamiltonians},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.93.012123},
+	Volume = {93},
+	Year = {2016},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.93.012123},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.93.012123}}
+
+@article{Mostafazadeh2002,
+	Author = {Mostafazadeh,Ali},
+	Date-Added = {2020-11-04 11:19:13 +0100},
+	Date-Modified = {2020-11-04 11:19:13 +0100},
+	Doi = {10.1063/1.1418246},
+	Eprint = {https://doi.org/10.1063/1.1418246},
+	Journal = {Journal of Mathematical Physics},
+	Number = {1},
+	Pages = {205-214},
+	Title = {Pseudo-Hermiticity versus PT symmetry: The necessary condition for the reality of the spectrum of a non-Hermitian Hamiltonian},
+	Url = {https://doi.org/10.1063/1.1418246},
+	Volume = {43},
+	Year = {2002},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.1418246}}
+
+@article{Ruschhaupt2017,
+	Abstract = {The scattering of quantum particles by non-Hermitian (generally non-local) potentials in one dimension may result in asymmetric transmission and/or reflection from left and right incidence. After extending the concept of symmetry for non-Hermitian potentials, eight generalized symmetries based on the discrete Klein's four-group (formed by parity, time reversal, their product, and unity) are found. Together with generalized unitarity relations they determine selection rules for the possible and/or forbidden scattering asymmetries. Six basic device types are identified when the scattering coefficients (squared moduli of scattering amplitudes) adopt zero/one values, and transmission and/or reflection are asymmetric. They can pictorically be described as a one-way mirror, a one-way barrier (a Maxwell pressure demon), one-way (transmission or reflection) filters, a mirror with unidirectional transmission, and a transparent, one-way reflector. We design potentials for these devices and also demonstrate that the behavior of the scattering coefficients can be extended to a broad range of incident momenta.},
+	Author = {A. Ruschhaupt and T. Dowdall and M. A. Sim{\'{o}}n and J. G. Muga},
+	Date-Added = {2020-11-04 11:14:45 +0100},
+	Date-Modified = {2020-11-04 11:14:45 +0100},
+	Doi = {10.1209/0295-5075/120/20001},
+	Journal = {{EPL} (Europhysics Letters)},
+	Month = {jan},
+	Number = {2},
+	Pages = {20001},
+	Publisher = {{IOP} Publishing},
+	Title = {Asymmetric scattering by non-Hermitian potentials},
+	Url = {https://doi.org/10.1209%2F0295-5075%2F120%2F20001},
+	Volume = {120},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1209%2F0295-5075%2F120%2F20001},
+	Bdsk-Url-2 = {https://doi.org/10.1209/0295-5075/120/20001}}
 
 @article{Ruschhaupt2004a,
 	Abstract = {Local and energy-independent complex potentials have been used in
