Added material from real eigenvalues paper

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -181,6 +181,7 @@ Do not forget about the people that has been by your side and supported you.
 
 \input{./Chapters/ChapterAsymmetricScattering} %Asymmetric Scattering nonhermitian
 \input{./Chapters/ChapterSymAndInvariants} %Invariants om non-h Hamiltonians
+\input{./Chapters/ChapterRealEigenValues} %complex plane symmetries of nh Hamiltonians
 
 \input{./Chapters/ChapterLocalRectification} %Rectification chain of Ions
 \input{./Chapters/RectificationChainOfIons} %Rectification chain of Ions
