Added material from discrete symmetries paper

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,105 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-11-05 11:42:56 +0100 
+%% Created for Mugagroup at 2020-11-06 12:27:59 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Born1964,
+	Address = {Oxford},
+	Author = {Born, Max and Wolf, Emil},
+	Date-Added = {2020-11-06 12:27:43 +0100},
+	Date-Modified = {2020-11-06 12:27:54 +0100},
+	Publisher = {Pergamon},
+	Title = {{Principles of optics: electromagnetic theory of propagation, interference and diffraction of light; 2nd ed.}},
+	Url = {https://cds.cern.ch/record/382152},
+	Year = {1964},
+	Bdsk-Url-1 = {https://cds.cern.ch/record/382152}}
+
+@inbook{Bernard2002,
+	Abstract = {We present a classification of non-Hermitian random matrices based on implementing commuting discrete symmetries. It contains 43 classes. This generalizes the classification of Hermitian random matrices due to Altland-Zirnbauer and it also extends the Ginibre ensembles of non-Hermitian matrices.},
+	Address = {Dordrecht},
+	Author = {Bernard, Denis and LeClair, Andr{\'e}},
+	Booktitle = {Statistical Field Theories},
+	Date-Added = {2020-11-06 12:25:18 +0100},
+	Date-Modified = {2020-11-06 12:25:18 +0100},
+	Doi = {10.1007/978-94-010-0514-2_19},
+	Editor = {Cappelli, Andrea and Mussardo, Giuseppe},
+	Isbn = {978-94-010-0514-2},
+	Pages = {207--214},
+	Publisher = {Springer Netherlands},
+	Title = {A Classification of Non-Hermitian Random Matrices},
+	Url = {https://doi.org/10.1007/978-94-010-0514-2_19},
+	Year = {2002},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-94-010-0514-2_19}}
+
+@article{Kawabata2019,
+	Author = {Kawabata, Kohei and Shiozaki, Ken and Ueda, Masahito and Sato, Masatoshi},
+	Date-Added = {2020-11-06 12:23:11 +0100},
+	Date-Modified = {2020-11-06 12:23:23 +0100},
+	Doi = {10.1103/PhysRevX.9.041015},
+	Issue = {4},
+	Journal = {Phys. Rev. X},
+	Month = {Oct},
+	Numpages = {52},
+	Pages = {041015},
+	Publisher = {American Physical Society},
+	Title = {Symmetry and Topology in Non-Hermitian Physics},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevX.9.041015},
+	Volume = {9},
+	Year = {2019},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevX.9.041015},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevX.9.041015}}
+
+@article{Garcia2014,
+	Abstract = {Recent advances in the theory of complex symmetric operators are presented and related to current studies in non-Hermitian quantum mechanics. The main themes of the survey are: the structure of complex symmetric operators, C-selfadjoint extensions of C-symmetric unbounded operators, resolvent estimates, reality of spectrum, bases of C-orthonormal vectors and conjugate-linear symmetric operators. The main results are complemented by a variety of natural examples arising in field theory, quantum physics and complex variables.},
+	Author = {Stephan Ramon Garcia and Emil Prodan and Mihai Putinar},
+	Date-Added = {2020-11-06 12:19:29 +0100},
+	Date-Modified = {2020-11-06 12:19:29 +0100},
+	Doi = {10.1088/1751-8113/47/35/353001},
+	Journal = {Journal of Physics A: Mathematical and Theoretical},
+	Month = {aug},
+	Number = {35},
+	Pages = {353001},
+	Publisher = {{IOP} Publishing},
+	Title = {Mathematical and physical aspects of complex symmetric operators},
+	Url = {https://doi.org/10.1088%2F1751-8113%2F47%2F35%2F353001},
+	Volume = {47},
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F1751-8113%2F47%2F35%2F353001},
+	Bdsk-Url-2 = {https://doi.org/10.1088/1751-8113/47/35/353001}}
+
+@book{Zee2016,
+	Address = {Princeton, NJ},
+	Author = {Zee, A},
+	Date-Added = {2020-11-06 12:09:44 +0100},
+	Date-Modified = {2020-11-06 12:09:58 +0100},
+	Publisher = {Princeton University Press},
+	Title = {{Group theory in a nutshell for physicists}},
+	Url = {https://cds.cern.ch/record/2128552},
+	Year = {2016},
+	Bdsk-Url-1 = {https://cds.cern.ch/record/2128552}}
+
+@article{Simon2019a,
+	Author = {Sim\'on, M. A. and Buend\'{\i}a, A. and Kiely, A. and Mostafazadeh, Ali and Muga, J. G.},
+	Date-Added = {2020-11-06 11:53:18 +0100},
+	Date-Modified = {2020-11-06 11:53:38 +0100},
+	Doi = {10.1103/PhysRevA.99.052110},
+	Issue = {5},
+	Journal = {Phys. Rev. A},
+	Month = {May},
+	Numpages = {12},
+	Pages = {052110},
+	Publisher = {American Physical Society},
+	Title = {$S$-matrix pole symmetries for non-Hermitian scattering Hamiltonians},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.99.052110},
+	Volume = {99},
+	Year = {2019},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.99.052110},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.99.052110}}
 
 @article{Mostafazadeh2002b,
 	Author = {Mostafazadeh, Ali},
