--- a/Thesis.tex
+++ b/Thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{verbatim}  % Needed for the "comment" environment to make LaTeX comments
 \usepackage{vector}  % Allows "\bvec{}" and "\buvec{}" for "blackboard" style bold vectors in maths
 \usepackage{mathtools}
+\usepackage[table]{xcolor}
 
 \usepackage{parskip} %para que haga el indent al principio de cada parrafo
 \setlength{\parindent}{15pt}
@@ -182,6 +183,7 @@ Do not forget about the people that has been by your side and supported you.
 \input{./Chapters/ChapterAsymmetricScattering} %Asymmetric Scattering nonhermitian
 \input{./Chapters/ChapterSymAndInvariants} %Invariants om non-h Hamiltonians
 \input{./Chapters/ChapterRealEigenValues} %complex plane symmetries of nh Hamiltonians
+\input{./Chapters/ChapterDiscreteNNSymmetries} %Discrete Hamiltonian symmetries
 
 \input{./Chapters/ChapterLocalRectification} %Rectification chain of Ions
 \input{./Chapters/RectificationChainOfIons} %Rectification chain of Ions
